--- a/frontend/src/admin/components/AdminLogin/AdminLogin.module.scss
+++ b/frontend/src/admin/components/AdminLogin/AdminLogin.module.scss
@@ -13,7 +13,7 @@
         margin: 0 auto;
         padding: 15px;
         max-width: 400px;
-        background-color: lighten($background-color, 5%);
+        background-color: $background-color-lighter-5;
         border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     }
@@ -67,7 +67,7 @@
 
         &:focus,
         &:hover {
-            background-color: darken($primary, 10%);
+            background-color: $primary-darker;
         }
     }
 }
