--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -19,6 +19,10 @@ $border-color: #dee2e6;
 $input-bg: #3a3a3a;
 
 
-
 // Typography 
 $ff-montserrat: "Montserrat", "Arial", sans-serif;
+
+
+//  Viewport 
+$vp-tablet: 1024px;
+$vp-mobile: 768px;
