--- a/frontend/src/scss/_container.scss
+++ b/frontend/src/scss/_container.scss
@@ -1,6 +1,17 @@
+@use "_mixins" as *;
+
 .container {
-    width: 100vw;
+    width: 100%;
     max-width: 1400px;
     padding: 0 60px;
     margin: 0 auto;
+    -webkit-box-sizing: border-box;
+
+    @include tablet {
+        padding: 0 30px;
+    }
+
+    @include mobile {
+        padding: 0 15px;
+    }
 }
